<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="165dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textColor="#B5A1A1"
            android:textColorHint="#9C716E"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText


            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:textColorHint="#CDBDBD"
            app:met_floatingLabel="normal"
            app:met_textColorHint="@color/colorAccent" />#/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:met_floatingLabel="normal"
            app:met_textColorHint="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            app:met_textColorHint="@color/colorAccent"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:background="@drawable/round"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/already_a_user_log_in"
            android:textColor="@color/colorAccent"
            />



    </LinearLayout>





</RelativeLayout>